<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.news.DailyNews" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    

    <item
        android:id="@+id/refresh"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    
    
    
    
    <item
        android:id="@+id/listitems"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/listitems"
        android:icon="@drawable/list"
        />
     
     <item
        android:id="@+id/search"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/search"
        android:icon="@drawable/search"
        />
    
    

</menu>
