<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.newsapplication.MainActivity"
    android:background="@drawable/newsbackground"
     >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forall"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" 
         android:textStyle="bold"
          android:textColor="@android:color/darker_gray"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/fromall"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" 
         android:textStyle="bold"
          android:textColor="@android:color/holo_red_light"
         />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/news"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        />

</RelativeLayout>
